--- a/index.html
+++ b/index.html
@@ -19,23 +19,17 @@
       min-height: 100vh;
       overflow-x: hidden;
       position: relative;
-      animation: fadeInBody 1.2s ease forwards;
-      opacity: 0;
-    }
-
-    @keyframes fadeInBody {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
+      overflow-y: auto;
     }
 
     /* ===== Profile ===== */
-    .profile { margin-top: 40px; animation: fadeIn 1.6s ease forwards; opacity: 0; }
+    .profile { margin-top: 40px; }
     .profile img {
       width: 160px; height: 160px;
       border-radius: 50%;
       object-fit: cover;
-      border: 4px solid #800000;
-      box-shadow: 0 0 20px rgba(200,0,0,0.6);
+      border: 4px solid #b30000;
+      box-shadow: 0 0 25px rgba(255,0,0,0.6);
       transition: transform 0.4s ease;
       animation: float 4s ease-in-out infinite alternate;
     }
@@ -44,14 +38,13 @@
     h1 {
       font-size: 40px;
       margin: 20px 0 10px 0;
-      color: #e61a1a;
+      color: #ff1a1a;
       letter-spacing: 1.5px;
-      text-shadow: 0 0 12px rgba(255,0,0,0.5);
-      animation: fadeIn 1.8s ease forwards;
-      opacity: 0;
+      text-shadow: 0 0 15px rgba(255,0,0,0.6);
+      animation: float 3.5s ease-in-out infinite alternate;
     }
 
-     .description {
+    .description {
       font-size: 15px; font-weight: 600;
       max-width: 90%;
       color: #fff;
@@ -64,20 +57,18 @@
     /* ===== Info Box (Elegan: hanya garis atas-bawah) ===== */
     .info-box {
       position: relative;
-      text-align: justify; /* rata kanan kiri */
+      text-align: center;
       width: 340px;
-      padding: 18px 14px;
+      padding: 18px 10px;
       margin: 20px 0;
       font-size: 14px;
       color: #fff;
       letter-spacing: 0.4px;
       line-height: 1.3;
       text-transform: uppercase;
-      animation: fadeIn 2.2s ease forwards;
-      opacity: 0;
     }
 
-    /* Garis atas dan bawah merah lembut berkilau */
+    /* Garis atas dan bawah merah berkilau */
     .info-box::before,
     .info-box::after {
       content: "";
@@ -85,16 +76,16 @@
       left: 0;
       width: 100%;
       height: 2px;
-      background: linear-gradient(90deg, rgba(255,0,0,0), #e61a1a, rgba(255,0,0,0));
-      box-shadow: 0 0 12px rgba(255,0,0,0.6);
+      background: linear-gradient(90deg, rgba(255,0,0,0), #ff1a1a, rgba(255,0,0,0));
+      box-shadow: 0 0 15px rgba(255,0,0,0.7);
       animation: lineGlow 3s ease-in-out infinite alternate;
     }
     .info-box::before { top: 0; }
     .info-box::after { bottom: 0; }
 
-    /* Efek teks gradasi halus */
+    /* Efek teks gradasi lembut */
     .info-box strong {
-      background: linear-gradient(90deg, #ff4040, #ffaaaa, #ff4040);
+      background: linear-gradient(90deg, #ff3333, #ffaaaa, #ff3333);
       background-size: 200%;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
@@ -102,9 +93,7 @@
       font-size: 15px;
       font-weight: 700;
       letter-spacing: 0.6px;
-      text-shadow: 0 0 6px rgba(255,0,0,0.3);
-      display: block;
-      text-align: center;
+      text-shadow: 0 0 8px rgba(255, 0, 0, 0.4);
     }
 
     @keyframes shineText {
