--- a/index.html
+++ b/index.html
@@ -38,37 +38,39 @@
     h1 {
       font-size: 40px;
       margin: 20px 0 10px 0;
-      color: #ff1a1a;
+      color: #ff3333;
       letter-spacing: 1.5px;
-      text-shadow: 0 0 15px rgba(255,0,0,0.6);
+      text-shadow: 0 0 15px rgba(255,0,0,0.4);
       animation: float 3.5s ease-in-out infinite alternate;
     }
 
     .description {
       font-size: 15px; font-weight: 600;
       max-width: 90%;
-      color: #fff;
+      color: #f2f2f2;
       margin-bottom: 25px;
-      line-height: 1.6;
+      line-height: 1.5;
       text-align: center;
-      text-shadow: 0 0 10px rgba(255,0,0,0.3);
+      text-shadow: 0 0 8px rgba(255,0,0,0.25);
     }
 
-    /* ===== Info Box (Elegan: hanya garis atas-bawah) ===== */
+    /* ===== Info Box Elegan ===== */
     .info-box {
       position: relative;
-      text-align: center;
-      width: 340px;
-      padding: 18px 10px;
-      margin: 20px 0;
+      text-align: justify;
+      width: 350px;
+      padding: 16px 10px;
+      margin: 25px 0;
       font-size: 14px;
       color: #fff;
-      letter-spacing: 0.4px;
-      line-height: 1.3;
+      line-height: 1.4;
       text-transform: uppercase;
+      background: rgba(40,0,0,0.35);
+      border-radius: 8px;
+      box-shadow: 0 0 25px rgba(255,0,0,0.1) inset;
     }
 
-    /* Garis atas dan bawah merah berkilau */
+    /* Garis atas & bawah berkilau */
     .info-box::before,
     .info-box::after {
       content: "";
@@ -76,36 +78,24 @@
       left: 0;
       width: 100%;
       height: 2px;
-      background: linear-gradient(90deg, rgba(255,0,0,0), #ff1a1a, rgba(255,0,0,0));
-      box-shadow: 0 0 15px rgba(255,0,0,0.7);
-      animation: lineGlow 3s ease-in-out infinite alternate;
+      background: linear-gradient(90deg, rgba(255,0,0,0), #ff4444, rgba(255,0,0,0));
+      animation: lineGlow 4s ease-in-out infinite alternate;
     }
     .info-box::before { top: 0; }
     .info-box::after { bottom: 0; }
 
-    /* Efek teks gradasi lembut */
     .info-box strong {
-      background: linear-gradient(90deg, #ff3333, #ffaaaa, #ff3333);
-      background-size: 200%;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      animation: shineText 5s linear infinite;
-      font-size: 15px;
-      font-weight: 700;
-      letter-spacing: 0.6px;
-      text-shadow: 0 0 8px rgba(255, 0, 0, 0.4);
-    }
-
-    @keyframes shineText {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
+      color: #ff6666;
+      display: block;
+      text-align: center;
+      margin-bottom: 6px;
+      letter-spacing: 0.8px;
     }
 
     @keyframes lineGlow {
-      0% { opacity: 0.7; box-shadow: 0 0 8px rgba(255,0,0,0.4); }
-      50% { opacity: 1; box-shadow: 0 0 18px rgba(255,100,100,0.5); }
-      100% { opacity: 0.7; box-shadow: 0 0 8px rgba(255,0,0,0.4); }
+      0% { opacity: 0.5; box-shadow: 0 0 8px rgba(255,0,0,0.3); }
+      50% { opacity: 1; box-shadow: 0 0 15px rgba(255,100,100,0.4); }
+      100% { opacity: 0.5; box-shadow: 0 0 8px rgba(255,0,0,0.3); }
     }
 
     /* ===== Menu ===== */
@@ -113,67 +103,52 @@
       width: 90%; max-width: 400px;
       display: flex;
       flex-direction: column;
-      gap: 20px;
-      margin-top: 25px;
-      animation: fadeIn 2.6s ease forwards;
+      gap: 18px;
+      margin-top: 20px;
+      animation: fadeIn 2.5s ease forwards;
       opacity: 0;
     }
     .menu a {
       display: flex;
       align-items: center;
       gap: 12px;
-      padding: 20px;
+      padding: 18px;
       text-decoration: none;
-      font-weight: bold;
+      font-weight: 600;
       color: #fff;
-      background: linear-gradient(135deg, #8b0000 0%, #400000 100%);
-      border-radius: 16px;
-      text-transform: uppercase;
+      background: linear-gradient(135deg, #6b0000 0%, #250000 100%);
+      border-radius: 14px;
       transition: all 0.3s ease;
-      box-shadow: 0 0 15px rgba(255,0,0,0.25);
-      font-size: 18px;
+      box-shadow: 0 0 15px rgba(255,0,0,0.15);
+      font-size: 17px;
       letter-spacing: 0.5px;
       position: relative;
       overflow: hidden;
       animation: float 4s ease-in-out infinite alternate;
     }
     .menu a.primary {
-      font-size: 22px;
-      padding: 25px 22px;
       font-weight: 700;
-      background: linear-gradient(135deg, #b30000 0%, #660000 100%);
+      background: linear-gradient(135deg, #a60000 0%, #400000 100%);
       animation: softPulse 3s infinite, float 4s ease-in-out infinite alternate;
     }
-    .menu a::after {
-      content: '';
-      position: absolute;
-      top: 0; left: -75%;
-      width: 50%; height: 100%;
-      background: linear-gradient(120deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.25) 50%, rgba(255,255,255,0) 100%);
-      transform: skewX(-25deg);
-      transition: all 0.7s ease-in-out;
-    }
-    .menu a:hover::after { left: 125%; }
-    .menu a:hover { transform: scale(1.06); box-shadow: 0 0 25px rgba(255,120,120,0.4),0 0 15px rgba(255,255,255,0.2); }
-    .menu-icon { width: 36px; height: 36px; object-fit: contain; filter: drop-shadow(0 0 4px rgba(255,0,0,0.6)); }
+    .menu a:hover { transform: scale(1.05); box-shadow: 0 0 25px rgba(255,100,100,0.4); }
+
+    .menu-icon { width: 34px; height: 34px; object-fit: contain; }
 
     @keyframes softPulse {
       0%,100% { box-shadow: 0 0 18px rgba(255,0,0,0.25); }
-      50% { box-shadow: 0 0 30px rgba(255,150,150,0.4); }
+      50% { box-shadow: 0 0 28px rgba(255,150,150,0.35); }
     }
-    @keyframes float { 0%{transform:translateY(0);}50%{transform:translateY(-6px);}100%{transform:translateY(0);} }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
+    @keyframes float { 0%{transform:translateY(0);}50%{transform:translateY(-6px);}100%{transform:translateY(0);} }
+    @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
 
     footer {
       margin-top: 45px;
       font-size: 13px;
       color: #aaa;
       border-top: 1px solid #330000;
-      padding: 20px;
+      padding: 18px;
       width: 100%;
       text-align: center;
       background-color: #0a0a0a;
@@ -181,20 +156,20 @@
       opacity: 0;
     }
 
-    /* ===== Bola jatuh ===== */
-    .falling-ball {
+    /* ===== Efek Koin Emas Jatuh ===== */
+    .falling-coin {
       position: fixed;
       top: -50px;
-      width: 26px;
-      height: 26px;
-      background: url('logo-removebg-preview (2).png') no-repeat center / contain;
+      width: 28px;
+      height: 28px;
+      background: url('coin-gold.png') no-repeat center / contain;
       pointer-events: none;
-      animation: fall linear forwards;
+      animation: coinFall linear forwards;
       z-index: 0;
-      opacity: 0.8;
+      opacity: 0.9;
     }
 
-    @keyframes fall {
+    @keyframes coinFall {
       to {
         transform: translateY(100vh) rotate(360deg);
         opacity: 0;
@@ -204,8 +179,7 @@
     @media (max-width: 500px) {
       h1 { font-size: 32px; }
       .info-box { width: 280px; font-size: 13px; padding: 14px; }
-      .menu a { font-size: 16px; padding: 16px; }
-      .menu a.primary { font-size: 20px; padding: 20px; }
+      .menu a { font-size: 15px; padding: 15px; }
     }
   </style>
 </head>
@@ -219,15 +193,15 @@
   <h1>KANGMARKUS</h1>
 
   <div class="description">
-    KANGMARKUS.COM / KANGMARKUS / ANGKA ONLINE / BETANGKA /GAMES BOLA / SLOT / LIVEGAMES SERTA PERMAINAN TEMBAK IKAN
+    KANGMARKUS.COM / KANGMARKUS / ANGKA ONLINE / BETANGKA / GAMES BOLA / SLOT / LIVEGAMES SERTA PERMAINAN TEMBAK IKAN
   </div>
+
   <div class="info-box">
     <strong>HADIAH FULLBET</strong>
-    
     4D x 10.000 / 3D x 1.000 / 2D x 100<br>
     (Termasuk TOTOMACAU)<br>
     <strong>Minimal Deposit Rp.10,000 dan Withdraw Rp.50,000</strong><br>
-    AMAN DAN AMANAH , DAFTAR LANGSUNG DAN RASAKAN KEMENANGANNYA!
+    Aman dan Amanah, Daftar Langsung dan Rasakan Kemenangannya!
   </div>
 
   <div class="menu">
@@ -245,16 +219,16 @@
   </footer>
 
   <script>
-    // Efek bola jatuh
-    function createFallingBall() {
-      const ball = document.createElement('div');
-      ball.classList.add('falling-ball');
-      ball.style.left = Math.random() * window.innerWidth + 'px';
-      ball.style.animationDuration = (5 + Math.random() * 4) + 's';
-      document.body.appendChild(ball);
-      setTimeout(() => ball.remove(), 9000);
+    // Efek koin emas jatuh
+    function createFallingCoin() {
+      const coin = document.createElement('div');
+      coin.classList.add('falling-coin');
+      coin.style.left = Math.random() * window.innerWidth + 'px';
+      coin.style.animationDuration = (6 + Math.random() * 4) + 's';
+      document.body.appendChild(coin);
+      setTimeout(() => coin.remove(), 10000);
     }
-    setInterval(createFallingBall, 1300);
+    setInterval(createFallingCoin, 1200);
   </script>
 </body>
 </html>
