--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
+    
     body {
       font-family: 'Poppins', sans-serif;
-      background: radial-gradient(circle at top, #1a0000 0%, #000 100%);
+      /* Background cokelat hitam sangat gelap untuk kesan mewah */
+      background: radial-gradient(circle at top, #1e160a 0%, #0a0a0a 100%);
       color: #fff;
       display: flex;
       flex-direction: column;
@@ -19,184 +21,152 @@
       min-height: 100vh;
       overflow-x: hidden;
       position: relative;
-      overflow-y: auto;
     }
 
-    /* ===== Profile ===== */
-    .profile { margin-top: 40px; }
+    /* ===== Profile (Dibuat lebih proporsional) ===== */
+    .profile { margin-top: 30px; }
     .profile img {
-      width: 160px; height: 160px;
+      width: 140px; height: 140px;
       border-radius: 50%;
       object-fit: cover;
-      border: 4px solid #b30000;
-      box-shadow: 0 0 25px rgba(255,0,0,0.6);
-      transition: transform 0.4s ease;
+      border: 2px solid #d4af37; /* Gold Metalik */
+      box-shadow: 0 0 20px rgba(212, 175, 55, 0.3);
+      transition: 0.4s;
       animation: float 4s ease-in-out infinite alternate;
     }
-    .profile img:hover { transform: scale(1.05); }
 
     h1 {
-      font-size: 40px;
-      margin: 20px 0 10px 0;
-      color: #ff1a1a;
-      letter-spacing: 1.5px;
-      text-shadow: 0 0 15px rgba(255,0,0,0.6);
+      font-size: 34px;
+      margin: 15px 0 5px 0;
+      color: #d4af37;
+      letter-spacing: 2px;
+      font-weight: 700;
+      text-transform: uppercase;
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
       animation: float 3.5s ease-in-out infinite alternate;
     }
 
     .description {
-      font-size: 15px; font-weight: 600;
-      max-width: 90%;
-      color: #fff;
-      margin-bottom: 25px;
-      line-height: 1.6;
+      font-size: 13px;
+      max-width: 85%;
+      color: #dfdfdf; /* Putih tulang agar elegan */
+      margin-bottom: 15px;
+      line-height: 1.4;
       text-align: center;
-      text-shadow: 0 0 10px rgba(255,0,0,0.3);
+      letter-spacing: 0.5px;
     }
 
-    /* ===== Info Box (Elegan: hanya garis atas-bawah) ===== */
+    /* ===== Info Box (Rapat & Elegan) ===== */
     .info-box {
       position: relative;
       text-align: center;
-      width: 340px;
-      padding: 18px 10px;
-      margin: 20px 0;
-      font-size: 14px;
+      width: 350px;
+      padding: 12px;
+      margin: 10px 0;
+      font-size: 13px;
       color: #fff;
-      letter-spacing: 0.4px;
-      line-height: 1.3;
-      text-transform: uppercase;
+      background: rgba(255, 255, 255, 0.03);
+      border-top: 1px solid #d4af37;
+      border-bottom: 1px solid #d4af37;
     }
 
-    /* Garis atas dan bawah merah berkilau */
-    .info-box::before,
-    .info-box::after {
+    .info-box strong {
+      color: #d4af37;
+      font-size: 14px;
+      letter-spacing: 1px;
+      display: inline-block;
+      margin-bottom: 2px;
+    }
+
+    /* Garis Berkilau Emas */
+    .info-box::before, .info-box::after {
       content: "";
       position: absolute;
-      left: 0;
-      width: 100%;
-      height: 2px;
-      background: linear-gradient(90deg, rgba(255,0,0,0), #ff1a1a, rgba(255,0,0,0));
-      box-shadow: 0 0 15px rgba(255,0,0,0.7);
+      left: 0; width: 100%; height: 1px;
+      background: linear-gradient(90deg, transparent, #d4af37, transparent);
       animation: lineGlow 3s ease-in-out infinite alternate;
     }
-    .info-box::before { top: 0; }
-    .info-box::after { bottom: 0; }
+    .info-box::before { top: -1px; }
+    .info-box::after { bottom: -1px; }
 
-    /* Efek teks gradasi lembut */
-    .info-box strong {
-      background: linear-gradient(90deg, #ff3333, #ffaaaa, #ff3333);
-      background-size: 200%;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      animation: shineText 5s linear infinite;
-      font-size: 15px;
-      font-weight: 700;
-      letter-spacing: 0.6px;
-      text-shadow: 0 0 8px rgba(255, 0, 0, 0.4);
-    }
-
-    @keyframes shineText {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
-    @keyframes lineGlow {
-      0% { opacity: 0.7; box-shadow: 0 0 8px rgba(255,0,0,0.4); }
-      50% { opacity: 1; box-shadow: 0 0 18px rgba(255,100,100,0.6); }
-      100% { opacity: 0.7; box-shadow: 0 0 8px rgba(255,0,0,0.4); }
-    }
-
-    /* ===== Menu ===== */
+    /* ===== Menu (Rapat & Grid Bergaya) ===== */
     .menu {
       width: 90%; max-width: 400px;
       display: flex;
       flex-direction: column;
-      gap: 20px;
-      margin-top: 25px;
+      gap: 10px; /* Jarak antar tombol dirapatkan */
+      margin-top: 10px;
     }
+
     .menu a {
       display: flex;
       align-items: center;
-      gap: 12px;
-      padding: 20px;
+      justify-content: flex-start; /* Mengubah dari center ke rata kiri */
+      gap: 15px;                  /* Jarak antara ikon dan teks */
+      padding: 14px 25px;         /* Padding kiri diperbesar agar teks tidak mepet pinggir */
       text-decoration: none;
-      font-weight: bold;
+      font-weight: 600;
       color: #fff;
-      background: linear-gradient(135deg, #b30000 0%, #660000 100%);
-      border-radius: 16px;
+      background: #1a1a1a;
+      border: 1px solid #333;
+      border-radius: 8px;
       text-transform: uppercase;
       transition: all 0.3s ease;
-      box-shadow: 0 0 15px rgba(255,0,0,0.3);
-      font-size: 18px;
-      letter-spacing: 0.6px;
-      position: relative;
-      overflow: hidden;
-      animation: float 4s ease-in-out infinite alternate;
+      font-size: 15px;
+      width: 100%;                /* Memastikan tombol memenuhi lebar container */
     }
+
+    /* Tombol Utama (Gold Putih) */
     .menu a.primary {
-      font-size: 22px;
-      padding: 25px 22px;
+      background: linear-gradient(145deg, #d4af37, #996515);
+      color: #000; /* Teks hitam agar kontras di warna emas */
+      border: none;
       font-weight: 700;
-      background: linear-gradient(135deg, #ff0000 0%, #990000 100%);
-      animation: softPulse 3s infinite, float 4s ease-in-out infinite alternate;
+      box-shadow: 0 4px 15px rgba(212, 175, 55, 0.3);
     }
-    .menu a::after {
-      content: '';
-      position: absolute;
-      top: 0; left: -75%;
-      width: 50%; height: 100%;
-      background: linear-gradient(120deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.3) 50%, rgba(255,255,255,0) 100%);
-      transform: skewX(-25deg);
-      transition: all 0.7s ease-in-out;
-    }
-    .menu a:hover::after { left: 125%; }
-    .menu a:hover { transform: scale(1.06); box-shadow: 0 0 28px rgba(255,150,150,0.5),0 0 18px rgba(255,255,255,0.3); }
-    .menu-icon { width: 40px; height: 40px; object-fit: contain; filter: drop-shadow(0 0 5px rgba(255,0,0,0.6)); }
 
-    @keyframes softPulse {
-      0%,100% { box-shadow: 0 0 18px rgba(255,0,0,0.3); }
-      50% { box-shadow: 0 0 35px rgba(255,200,200,0.5); }
+    .menu a:hover {
+      border-color: #d4af37;
+      background: #222;
+      transform: translateY(-2px);
     }
-    @keyframes float { 0%{transform:translateY(0);}50%{transform:translateY(-6px);}100%{transform:translateY(0);} }
 
+    .menu a.primary:hover {
+      background: linear-gradient(145deg, #f1c40f, #d4af37);
+      box-shadow: 0 6px 20px rgba(212, 175, 55, 0.5);
+    }
+
+    .menu-icon { 
+      width: 24px; height: 24px; 
+      filter: brightness(0) invert(1); /* Icon jadi putih */
+    }
+
+    /* ===== Footer ===== */
     footer {
-      margin-top: 45px;
-      font-size: 13px;
-      color: #aaa;
-      border-top: 1px solid #330000;
+      margin-top: 40px;
+      font-size: 11px;
+      color: #666;
+      border-top: 1px solid #222;
       padding: 20px;
       width: 100%;
       text-align: center;
-      background-color: #0a0a0a;
+      background-color: #050505;
     }
 
-    /* ===== Bola jatuh ===== */
-    .falling-ball {
-      position: fixed;
-      top: -50px;
-      width: 28px;
-      height: 28px;
-      background: url('logo-removebg-preview (2).png') no-repeat center / contain;
-      pointer-events: none;
-      animation: fall linear forwards;
-      z-index: 0;
-      opacity: 0.8;
+    /* ===== Animasi ===== */
+    @keyframes lineGlow {
+      0% { opacity: 0.3; }
+      100% { opacity: 1; }
     }
-
-    @keyframes fall {
-      to {
-        transform: translateY(100vh) rotate(360deg);
-        opacity: 0;
-      }
+    @keyframes float { 
+      0%{transform:translateY(0);} 
+      100%{transform:translateY(-8px);} 
     }
 
     @media (max-width: 500px) {
-      h1 { font-size: 32px; }
-      .info-box { width: 280px; font-size: 13px; padding: 16px; }
-      .menu a { font-size: 16px; padding: 16px; }
-      .menu a.primary { font-size: 20px; padding: 20px; }
+      h1 { font-size: 28px; }
+      .info-box { width: 300px; }
+      .menu a { font-size: 14px; padding: 12px; }
     }
   </style>
 </head>
@@ -219,12 +189,15 @@
     AMAN DAN AMANAH
   </div>
   <div class="menu">
-    <a href="https://bangun.angkabet788.life/?referralid=anshun168" target="_blank" class="primary"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> LOGIN</a>
-    <a href="https://angkabet30294.com/?referralid=anshun168" target="_blank" class="primary"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> LOGIN ALTERNATIF</a>
-    <a href="https://angkabet32321.com/?referralid=anshun168" target="_blank" class="primary"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> LOGIN ALTERNATIF1</a>
-    <a href="https://rindu.angkabet788.life/?referralid=anshun168" target="_blank" class="primary"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> DAFTAR</a>
-    <a href="https://direct.lc.chat/16829148/?utm_medium=social&utm_source=heylink.me" target="_blank"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> LIVE CHAT ADMIN</a>
-    <a href="https://rtpslotangkabet06913.com/?utm_medium=social&utm_source=heylink.me" target="_blank"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> RTP SLOT</a>
+    <a href="https://ligabandot31808.com/?referralid=anshun168" target="_blank" class="primary"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> LOGIN SITUS BARU</a>
+    <a href="https://ligabandot86456.com/?referralid=anshun168" target="_blank" class="primary"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> DAFTAR SITUS BARU</a>
+    <a href="https://angkabet30294.com/?referralid=anshun168" target="_blank" class="primary"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> LOGIN SITUS LAMA</a>
+    <a href="https://angkabet32321.com/?referralid=anshun168" target="_blank" class="primary"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> DAFTAR SITUS LAMA</a>
+    <a href="https://ligabandot31808.com/blog/?title=PREDIKSI%20BOLA" target="_blank" class="primary"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> PREDIKSI BOLA</a>
+    <a href="https://cucubola.online" target="_blank" class="primary"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> PREDIKSI ANGKA</a>
+    <a href="https://direct.lc.chat/19244517" target="_blank"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> LIVE CHAT SITUS BARU</a>
+    <a href="https://direct.lc.chat/16829148/?utm_medium=social&utm_source=heylink.me" target="_blank"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> LIVE CHAT SITUS LAMA</a>
+    <a href="https://cucubola.online/" target="_blank"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> RTP SLOT</a>
     <a href="https://kangmarkus.com" target="_blank"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> WA 0817-1730-3255</a>
   </div>
   <footer>
